--- a/_includes/assembly/header.html
+++ b/_includes/assembly/header.html
@@ -5,6 +5,9 @@
     <a class="site-title" href="http://D4prog.github.io/">D4prog.github.io</a>
     <span class=site-title>&nbsp;/&nbsp</span>
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <span class=site-title>&nbsp;/&nbsp</span>
+    <a class="site-title" href="{{ site.baseurl }}/assembly">アセンブラ</a>
+
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
